tests/invalid/ref_to_implicit_comma.m
:- module ref_to_implicit_comma.
:- interface.

:- pred test is det.

:- implementation.

test :- fail.
   test,
   test,
   test.
